I would love to do something web based for our final.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My First Project</title>
 </head>
 <body>
-    <h1>The cake is a lie!</h1>
+    <h1>I would love to see a something web base for our final!</h1>
 </body>
 </html>
